Fixed issue with extra whitespace on the side

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,11 @@
+html,body{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding:0px;
+    overflow-x: hidden;
+}
+
 
 /* ==================== HOME ==================== */
 
@@ -35,15 +43,9 @@ img.medium {
 .payamBlock {
 
   background-color: #ffecbc;
-
   text-align: center;
-
-  width: 100%;
-  height: 100%;
-  margin: 0;
   padding-top: 5%;
   padding-bottom: 5%;
-
 }
 
 .AboutMePic {
