--- a/css/projects.css
+++ b/css/projects.css
@@ -1,4 +1,10 @@
-
+html,body{
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding:0px;
+  overflow-x: hidden;
+}
 /* ==================== HOME ==================== */
 
 h1{
@@ -35,12 +41,7 @@ img.medium {
 .headBlock {
 
   background-color: #ffecbc;
-
   text-align: center;
-
-  width: 100%;
-  height: 100%;
-  margin: 0;
   padding-top: 5%;
   padding-bottom: 5%;
 
